k8s-manifests/overlays/dev/superapp/client/updates/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-rate
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: exchange-rate
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/exchange-rate-dev:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: news
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/news-dev:latest
        imagePullPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: chat
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/chat-dev:latest
        imagePullPolicy: Always
