k8s-manifests/overlays/dev/superapp/client/updates/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: exchange-rate-route
spec:
  path: /api/v1/cbesuperapp/exchange_rate
  to:
    name: exchange-rate-dev
    weight: 100
    kind: Service
  host: devapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: news-route
spec:
  path: /api/v1/cbesuperapp/news
  to:
    name: news-dev
    weight: 100
    kind: Service
  host: devapisuperapp.cbe.com.et
  port:
    targetPort: 8080
